# log-analyser

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  result.txt
.github/workflows/: ci.yml
include/: ILogParser.h  JsonLogParser.h  LogAnalyser.h  TextLogParser.h
logs/: sample.logy
src/: JsonLogParser.cpp  LogAnalyser.cpp  TextLogParser.cpp  main.cpp
tests/: test_log_analyser.cpp
